<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbarArticulos"
        android:background="@color/purple_700"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_article_24"
            tools:ignore="ImageContrastCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/articulos_title"/>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:id="@+id/etCode"
        android:visibility="invisible"
        android:inputType="number"
        android:hint="@string/enter_code"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btnUp"
        android:layout_gravity="center"
        android:text="@string/up_data"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btnMod"
        android:layout_marginTop="12dp"
        android:text="@string/modification"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/btnDown"
        android:text="@string/down_code"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/btnCodeQuery"
        android:text="@string/code_query"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/btnSeeList"
        android:text="@string/see_list_articles"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/btnDescQuery"
        android:text="@string/description_query"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
</LinearLayout>