<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item_add_book"
        android:title="@string/add_book"
        android:icon="@drawable/baseline_bookmark_add_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_edit_book"
        android:title="@string/edit_book"
        android:icon="@drawable/baseline_edit_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_delete_book"
        android:title="@string/erase_book"
        android:icon="@drawable/baseline_bookmark_remove_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_close_session"
        android:title="@string/cerrar_sesion"
        android:icon="@drawable/baseline_power_settings_new_24"
        app:showAsAction="never"/>


</menu>