<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".booksAgenda.menuFragments.AddBookFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">


        <EditText
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/book_name_add"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/txtAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/author_book_add"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/txtYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/year_book_add"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/gender_book_add"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/txtUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/units_available"
            android:inputType="number"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add_book" />

        <Button
            android:id="@+id/btnOut"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/salir_sin_guardar" />

    </LinearLayout>

</FrameLayout>